# lolbison

./: .gitignore  AstNode.h  BreakIndicator.h  CMakeLists.txt  Program.cpp  Program.h  README.md  ast.h  ast_forward_declarations.h  clean.sh  driver.cpp  driver.hh  main.cpp  parser.y  scanner.h  scanner.l  test.lol
design/: ast_classes.hh  desired_tree.txt  grammar.txt  test_primes.lol
expressions/: ArrayAccess.cpp  ArrayAccess.h  BooleanLiteral.cpp  BooleanLiteral.h  Expression.h  Identifier.cpp  Identifier.h  It.cpp  It.h  Join.cpp  Join.h  LogicalNot.cpp  LogicalNot.h  NumberLiteral.cpp  NumberLiteral.h  StringLiteral.cpp  StringLiteral.h
expressions/binary_ops/: BinaryAnd.cpp  BinaryAnd.h  BinaryDiv.cpp  BinaryDiv.h  BinaryEq.cpp  BinaryEq.h  BinaryMax.cpp  BinaryMax.h  BinaryMin.cpp  BinaryMin.h  BinaryMod.cpp  BinaryMod.h  BinaryMul.cpp  BinaryMul.h  BinaryNeq.cpp  BinaryNeq.h  BinaryOp.cpp  BinaryOp.h  BinaryOr.cpp  BinaryOr.h  BinarySub.cpp  BinarySub.h  BinarySum.cpp  BinarySum.h  BinaryXor.cpp  BinaryXor.h
objects/: BooleanObject.cpp  BooleanObject.h  NilObject.cpp  NilObject.h  NumberObject.cpp  NumberObject.h  Object.h  StringObject.cpp  StringObject.h
reference/: grammar.txt
statements/: ArrayAssign.cpp  ArrayAssign.h  ArrayDecl.cpp  ArrayDecl.h  ArrayNewIndex.cpp  ArrayNewIndex.h  Break.cpp  Break.h  ExprStatement.cpp  ExprStatement.h  IfThen.cpp  IfThen.h  Loop.cpp  Loop.h  Print.cpp  Print.h  Statement.h  VarAssign.cpp  VarAssign.h  VarDecl.cpp  VarDecl.h
statements/loop_components/: DecrementLoopHead.cpp  DecrementLoopHead.h  IncrementLoopHead.cpp  IncrementLoopHead.h  LoopCondition.cpp  LoopCondition.h  LoopHead.cpp  LoopHead.h  LoopUntil.cpp  LoopUntil.h  LoopWhile.cpp  LoopWhile.h
test/: test.lol
test/01_Eratosthenes/: ast.txt  output.txt
test/02_Operators/: ast.txt  output.txt  test.lol
